fix background overflow issue and button stacking order

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,7 +36,7 @@ body {
 
 .buttons-container {
   color: white;
-  max-width: 70%;
+  max-width: 80%;
   margin-top: 2rem;
 
   &__inner {
@@ -118,10 +118,12 @@ body {
 
 .main-image {
   width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
+  overflow: hidden;
 
   .image {
     width: 100%;
